--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.8",
         "mcamara/laravel-localization": "^1.8",
         "pusher/pusher-php-server": "^7.2",
+        "spatie/laravel-query-builder": "^5.8",
         "symfony/intl": "^6.3"
     },
     "require-dev": {
@@ -32,7 +33,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/Categoray.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
