--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,5 @@
 <IfModule mod_rewrite.c>
-    <IfModule mod_negotiation.c>
+   <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
 
@@ -14,7 +14,7 @@
     RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301]
 
-    # Send Requests To Front Controller...
+    # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
