--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,12 +18,6 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ /index.php [L]
-    <IfModule mod_setenvif.c>
-      <IfModule mod_headers.c>
-        <FilesMatch "\.(avifs?|bmp|cur|gif|ico|jpe?g|jxl|a?png|svgz?|webp)$">
-          SetEnvIf Origin ":" IS_CORS
-          Header set Access-Control-Allow-Origin "*" env=IS_CORS
-        </FilesMatch>
-      </IfModule>
-    </IfModule>
+    Header always set Access-Control-Allow-Origin "*"
+
 </IfModule>
