--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "mcamara/laravel-localization": "^1.8",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-query-builder": "^5.8",
+        "stripe/stripe-php": "^14.1",
         "symfony/intl": "^6.3"
     },
     "require-dev": {
