--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "mcamara/laravel-localization": "^1.8",
         "pusher/pusher-php-server": "^7.2",
+        "rap2hpoutre/fast-excel": "^5.4",
         "spatie/laravel-query-builder": "^5.8",
         "stripe/stripe-php": "^14.1",
         "symfony/intl": "^6.3"
