--- a/.github/workflows/godaddy.yml
+++ b/.github/workflows/godaddy.yml
@@ -18,7 +18,7 @@ jobs:
         username: usmanahmed
         password: ggnjEG55g!!$qf531E0B
 
-        protocol: sftp
+        protocol: ftps
         server-dir: /usr/home/usmanahmed/
         local-dir: ./
         exclude: .git*, .env, .github, storage/*.key
