--- a/.github/workflows/godaddy.yml
+++ b/.github/workflows/godaddy.yml
@@ -19,7 +19,7 @@ jobs:
         password: UsmanAhmed12
 
         protocol: ftps
-        server-dir: /usr/home/usmanahmed/
+        server-dir:  /usr/home/usmanahmed/domains/usmanahmed.serv00.net/public_html
         local-dir: ./
         exclude: .git*, .env, .github, storage/*.key
     - name: ssh actions (update packages)
@@ -31,7 +31,7 @@ jobs:
 
         port: 21098
         script: |
-          cd /usr/home/usmanahmed/
+          cd  /usr/home/usmanahmed/domains/usmanahmed.serv00.net/public_html
           ls
           rm -f composer.lock
           composer install --ignore-platform-reqs
